assets/css/custom.css
.b-example-divider {
    margin: auto;
    width: 20%;
    height: 0rem;
    background-color: rgba(0, 0, 0, .1);
    border: solid rgba(0, 0, 0, .15);
    border-width: 1px 0;
    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
}

.b-example-divider-sidebar {
    width: 100%;
    height: 3rem;
    background-color: rgba(0, 0, 0, .1);
    border: solid rgba(0, 0, 0, .15);
    border-width: 1px 0;
    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
}

.b-example-vr {
    flex-shrink: 0;
    width: 0.75rem;
    height: 100vmax;
}

img {
    width: 250px;
    height: auto;
    border-radius: 5%;
    align-self: center;
}

.img-left {
    width: 250px;
    height: auto;
    border-radius: 5%;
    margin-right: 25px;
    float: left;
}

.img-right {
    width: 250px;
    height: auto;
    border-radius: 5%;
    margin-left: 25px;
    float: right;
}

.content-margin {
    justify-content: left;
    margin-left: 21%;
}

